--- a/public/partials/technologies.html
+++ b/public/partials/technologies.html
@@ -1,50 +1,54 @@
 <div ng-controller="TechnologiesController as controller" class="container-fluid" style="min-height: 85vh">
-    <h2 style="font-weight: 300; font-family: Roboto; padding-top: 15px; padding-left: 15px; padding-right: 15px;">
-        Tecnologias registradas en SigeTEC
-    </h2>
-    <div ng-show="controller.noTechnologies" class="alert alert-info">
-        <p>No hay tecnologias registradas.</p>
-    </div>
-    <div ng-hide="infoMessage != ''" class="alert alert-info">
-        <p>{{infoMessage}}</p>
-    </div>
-    <br />
-    <div class="row" style="height:100%; margin-bottom: 30px;">
-        <md-content style="width: 100%; border-radius: 10px; box-shadow: 0px 2px 10px #cbc7c7; margin-left: 10px; margin-right: 10px;">
-            <div style="margin:2%">
-                <!-- <table datatable="ng" class="row-border hover" id="technologyTable"> -->
-                    <table class="row-border hover" id="technologyTable">
-                        <thead>
-                            <tr>
-                                <th class="table-title">Id</th>
-                                <th class="table-title">Nombre</th>
-                                <th class="table-title">Descripción</th>
-                                <th class="table-title">Investigador</th>
-                                <th class="table-title">Fecha de registro</th>
-                                <th class="table-title">Tipo</th>
-                                <!-- <th class="table-title">Detalles</th> -->
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="technology in controller.technologies" class="table-row" ng-click="controller.editTechnology(technology)">
-                                <td style="width: 20%; text-align: center">{{ technology.technologyId }}</td>
-                                <td style="width: 20%; text-align: center">{{ technology.name }}</td>
-                                <td style="width: 25%; text-align: center">{{ (technology.description | limitTo: 130) || 'Sin descripción' }}</td>
-                                <td style="width: 20%; text-align: center">{{ technology['principal-researcher-email'] }}</td>
-                                <td style="width: 10%; text-align: center" data-sort="{{technology['registeredAt']}}">{{ controller.setTechnologyRegistrationDate(technology) }}</td>
-                                <td style="width: 5%; text-align: center">
-                                    <div style="vertical-align: top; text-align: center;">
-                                        <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
-                                        <span ng-show="{{technology['granted-date'] == undefined}}" class="badge" style="background-color: #D51B23;">Tecnología</span>
-                                    </div>
-                                </td>
-                                <!-- <td style="width: 5%; text-align: center">
-                                    <img src="img/view.png" style="width:40%; cursor: pointer" ng-click="controller.editTechnology(technology)"/>
-                                </td> -->
-                            </tr>
-                        </tbody>
-                </table>
-            </div>
-        </md-content>
-    </div>
+  <h2 style="font-weight: 300; font-family: Roboto; padding-top: 15px; padding-left: 15px; padding-right: 15px;">
+    Tecnologias registradas en SigeTEC
+  </h2>
+  <div ng-show="controller.noTechnologies" class="alert alert-info">
+    <p>No hay tecnologias registradas.</p>
+  </div>
+  <div ng-hide="infoMessage != ''" class="alert alert-info">
+    <p>{{infoMessage}}</p>
+  </div>
+  <br />
+  <div class="row" style="height:100%; margin-bottom: 30px;">
+    <md-content style="width: 100%; border-radius: 10px; box-shadow: 0px 2px 10px #cbc7c7; margin-left: 10px; margin-right: 10px;">
+      <div style="margin:2%">
+        <!-- <table datatable="ng" class="row-border hover" id="technologyTable"> -->
+        <table class="row-border hover" id="technologyTable">
+          <thead>
+            <tr>
+              <th class="table-title">Id</th>
+              <th class="table-title">Nombre</th>
+              <th class="table-title">Descripción</th>
+              <th class="table-title">Investigador</th>
+              <th class="table-title">Fecha de registro</th>
+              <th class="table-title">Personal OTRI asignado</th>
+              <th class="table-title">Tipo</th>
+              <th class="table-title">Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="technology in controller.technologies" class="table-row" ng-click="controller.editTechnology(technology)">
+              <td style="text-align: center">{{ technology.technologyId }}</td>
+              <td style="text-align: center">{{ technology.name }}</td>
+              <td style="text-align: center">{{ (technology.description | limitTo: 130) || 'Sin descripción' }}</td>
+              <td style="text-align: center">{{ technology['principal-researcher-email'] }}</td>
+              <td style="text-align: center" data-sort="{{technology['registeredAt']}}">{{ controller.setTechnologyRegistrationDate(technology) }}</td>
+              <td style="text-align: center">{{ technology['assignedTo'] ? technology['assignedTo'] : 'Sin asignar' }}</td>
+              <td style="text-align: center">
+                <div style="vertical-align: top; text-align: center;">
+                  <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
+                  <span ng-show="{{technology['granted-date'] == undefined}}" class="badge" style="background-color: #D51B23;">Tecnología</span>
+                </div>
+              </td>
+              <td>
+                <div style="vertical-align: top; text-align: center;">
+                  <span class="badge" style="background-color: #1787af;">{{ technology['status'] }}</span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </md-content>
+  </div>
 </div>
