My Assigned technology list functionality added

--- a/public/partials/assigned-technologies.html
+++ b/public/partials/assigned-technologies.html
@@ -1,16 +1,17 @@
-<div ng-controller="TechnologiesController as controller" class="container-fluid" style="min-height: 85vh">
+<div ng-controller="AssignedTechnologiesController as controller" class="container-fluid" style="min-height: 85vh">
   <h2 style="font-weight: 300; font-family: Roboto; padding-top: 15px; padding-right: 15px;">
-    Tecnologias registradas en SigeTEC
+    Tecnologías asignadas en SigeTEC
   </h2>
   <div ng-show="controller.noTechnologies" class="alert alert-info">
-    <p>No hay tecnologias registradas en el sistema.</p>
+    <p>No tienes tecnologías asignadas en el sistema.</p>
   </div>
   <!-- <div ng-hide="infoMessage != ''" class="alert alert-info">
     <p>{{infoMessage}}</p>
   </div> -->
   <div ng-show="!controller.noTechnologies">
     <p style="text-align: justify; color: #000000a8; font-size: 0.9em;">
-      A continuación encontrarás todas las tecnologías, independientemente de su estado, que han sido registradas en el sistema por los investigadores principales. <br>
+      A continuación encontrarás el listado de todas las tecnologías, independientemente de su estado, que le han sido asignadas en el sistema para continuar con el proceso de
+      transferencia de tecnología. <br>
       En esta tabla podrás realizar búsquedas por cualquiera de los valores que toman las columnas, así mismo por palabras que hayan sido incluídas en la descripción
       de la tecnología. <br>
       El listado de tecnologías se encuentra ordenado por defecto de la registrada más reciente a la más antigua. <br> Haz click en la tecnología de tu interés para que el
@@ -28,7 +29,7 @@
                 <th class="table-title" ng-show="false">Descripción</th>
                 <th class="table-title">Investigador</th>
                 <th class="table-title">Fecha de registro</th>
-                <th class="table-title">Personal OTRI asignado</th>
+                <!-- <th class="table-title">Personal OTRI asignado</th> -->
                 <th class="table-title">Tipo</th>
                 <th class="table-title">Estado</th>
               </tr>
@@ -40,7 +41,7 @@
                 <td style="text-align: center" ng-show="false">{{ (technology.description | limitTo: 130) || 'Sin descripción' }}</td>
                 <td style="text-align: center">{{ technology['principal-researcher-email'] }}</td>
                 <td style="text-align: center" data-sort="{{technology['registeredAt']}}">{{ controller.setTechnologyRegistrationDate(technology) }}</td>
-                <td style="text-align: center">{{ technology['assignedTo'] ? technology['assignedTo'] : 'Sin asignar' }}</td>
+                <!-- <td style="text-align: center">{{ technology['assignedTo'] ? technology['assignedTo'] : 'Sin asignar' }}</td> -->
                 <td style="text-align: center">
                   <div style="vertical-align: top; text-align: center;">
                     <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
