--- a/public/partials/assigned-technologies.html
+++ b/public/partials/assigned-technologies.html
@@ -5,9 +5,7 @@
   <div ng-show="controller.noTechnologies" class="alert alert-info">
     <p>No tienes tecnologías asignadas en el sistema.</p>
   </div>
-  <!-- <div ng-hide="infoMessage != ''" class="alert alert-info">
-    <p>{{infoMessage}}</p>
-  </div> -->
+
   <div ng-show="!controller.noTechnologies">
     <p style="text-align: justify; color: #000000a8; font-size: 0.9em;">
       A continuación encontrarás el listado de todas las tecnologías, independientemente de su estado, que le han sido asignadas en el sistema para continuar con el proceso de
@@ -20,16 +18,15 @@
     <div class="row" style="height:100%; margin-bottom: 30px;">
       <md-content style="width: 100%; border-radius: 10px; box-shadow: 0px 2px 10px #cbc7c7; margin-left: 10px; margin-right: 10px;">
         <div style="margin:2%">
-          <!-- <table datatable="ng" class="row-border hover" id="technologyTable"> -->
           <table class="row-border hover" id="technologyTable">
             <thead>
               <tr>
                 <th class="table-title">Id</th>
                 <th class="table-title">Nombre de tecnología</th>
                 <th class="table-title" ng-show="false">Descripción</th>
-                <th class="table-title">Investigador</th>
+                <th class="table-title">Investigador principal</th>
                 <th class="table-title">Fecha de registro</th>
-                <!-- <th class="table-title">Personal OTRI asignado</th> -->
+                <th class="table-title">Tipo invención</th>
                 <th class="table-title">Tipo</th>
                 <th class="table-title">Estado</th>
               </tr>
@@ -38,10 +35,10 @@
               <tr ng-repeat="technology in controller.technologies" class="table-row" ng-click="controller.editTechnology(technology)">
                 <td style="text-align: center">{{ technology.technologyId }}</td>
                 <td style="text-align: center">{{ technology.name }}</td>
-                <td style="text-align: center" ng-show="false">{{ (technology.description | limitTo: 130) || 'Sin descripción' }}</td>
+                <td style="text-align: center" ng-show="false">{{ (technology.description) || 'Sin descripción' }}</td>
                 <td style="text-align: center">{{ technology['principal-researcher-email'] }}</td>
                 <td style="text-align: center" data-sort="{{technology['registeredAt']}}">{{ controller.setTechnologyRegistrationDate(technology) }}</td>
-                <!-- <td style="text-align: center">{{ technology['assignedTo'] ? technology['assignedTo'] : 'Sin asignar' }}</td> -->
+                <td style="text-align: center">{{ technology['technology-type'].charAt(0).toUpperCase() + technology['technology-type'].slice(1)}}</td>
                 <td style="text-align: center">
                   <div style="vertical-align: top; text-align: center;">
                     <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
