Working on user profile feature

--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -34,6 +34,11 @@
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">Últimas tecnologías registradas</span>
+            <p style="font-size: 0.8em; color: #8c8b8beb;">
+              Aquí encontrarás la cinco (5) tecnologías más recientes registradas en SigeTEC. <br>
+              Para ver todas las tecnologías registradas en el sistema ingresa a la opción
+              "Todas las tecnologías" en la barra lateral de opciones de la aplicación.
+            </p>
           </md-card-title-text>
         </md-card-title>
         <md-card-content layout="row" layout-align="space-between">
@@ -58,6 +63,11 @@
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">Mis tecnologías recientemente asignadas</span>
+            <p style="font-size: 0.8em; color: #8c8b8beb;">
+              Aquí encontrarás la cinco (5) tecnologías más recientes que han sido asignadas a tu cuenta en SigeTEC. <br>
+              Para ver todas las tecnologías que has creado en el sistema ingresa a la opción
+              "Tecnologías asignadas" en la barra lateral de opciones de la aplicación.
+            </p>
           </md-card-title-text>
         </md-card-title>
         <md-card-content layout="row" layout-align="space-between">
