--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,204 +1,217 @@
 body {
-    font-family: Roboto, Arial, sans-serif;
-    background-color: #FFF;
-    color: rgba(0,0,0,0.87);
-    /*height: auto !important*/
-    line-height: 1.3 !important;
+  font-family: Roboto, Arial, sans-serif;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.87);
+  /*height: auto !important*/
+  line-height: 1.3 !important;
 }
 
 a {
-    color: rgb(3,155,229);
+  color: rgb(3, 155, 229);
 }
 
 .header {
-    background-color: #fff; 
-    height: 50px; 
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
+  background-color: #fff;
+  height: 50px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .message {
-    /*max-width: 1050px;*/
-    margin: 40px auto;
-    box-shadow: 0 0px 10px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-    border-radius: 10px;
-    background: rgb(250, 250, 250);;
-    padding: 16px 24px;
+  /*max-width: 1050px;*/
+  margin: 40px auto;
+  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
+  background: rgb(250, 250, 250);
+  padding: 16px 24px;
 }
 
 .message h1 {
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-    margin: 0 0 16px;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0 0 16px;
 }
 
 .message p {
-    font-weight: 300;
-    line-height: 150%;
+  font-weight: 300;
+  line-height: 150%;
 }
 
 .message ul {
-    list-style: none;
-    margin: 16px 0 0;
-    padding: 0;
-    text-align: center;
+  list-style: none;
+  margin: 16px 0 0;
+  padding: 0;
+  text-align: center;
 }
 
 .message li a {
-    display: inline-block;
-    padding: 8px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 500;
-    background: rgb(3,155,229);
-    color: white;
-    border: 1px solid rgb(3,155,229);
-    border-radius: 3px;
-    font-size: 14px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  display: inline-block;
+  padding: 8px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 500;
+  background: rgb(3, 155, 229);
+  color: white;
+  border: 1px solid rgb(3, 155, 229);
+  border-radius: 3px;
+  font-size: 14px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-.tab-container{
-    border-bottom: solid #ccc 1pt;
-    background-color: #f7f7f7;
+.tab-container {
+  border-bottom: solid #ccc 1pt;
+  background-color: #f7f7f7;
 }
 
 .tab {
-    padding: 7pt;
-    font-size: 12pt;
-    font-weight: 300;
+  padding: 7pt;
+  font-size: 12pt;
+  font-weight: 300;
 }
 
 .selected {
-    color: rgb(16,108,200);
-    border-bottom: solid rgb(255,82,82) 3pt;
+  color: rgb(16, 108, 200);
+  border-bottom: solid rgb(255, 82, 82) 3pt;
 }
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-    color: #333;
-    background-color: #FFF;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
+  color: #333;
+  background-color: #fff;
 }
 
-md-toolbar.md-default-theme.md-hue-2:not(.md-menu-toolbar), md-toolbar.md-hue-2:not(.md-menu-toolbar) {
-    background-color: #fff;
-    border-bottom: solid 2px #D51B23;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+md-toolbar.md-default-theme.md-hue-2:not(.md-menu-toolbar),
+md-toolbar.md-hue-2:not(.md-menu-toolbar) {
+  background-color: #fff;
+  border-bottom: solid 2px #d51b23;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar) {
-    background-color: #fff;
-    border-bottom: solid 2px #D51B23;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+md-toolbar.md-default-theme:not(.md-menu-toolbar),
+md-toolbar:not(.md-menu-toolbar) {
+  background-color: #fff;
+  border-bottom: solid 2px #d51b23;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-.navbar-default .navbar-nav>li>a {
-    color: #FFF;
+.navbar-default .navbar-nav > li > a {
+  color: #fff;
 }
 
 .headerbar {
-    background-color: #eb1e00;
+  background-color: #eb1e00;
 }
 
 .navbar-default .navbar-brand {
-    color: #FFF;
+  color: #fff;
 }
 
 .navbar-default .navbar-brand:hover {
-    color: #FFF;
+  color: #fff;
 }
 
-h3{
-    color: #E71C24;
+h3 {
+  color: #e71c24;
 }
 
-h4{
-    color: #E71C24;
+h4 {
+  color: #e71c24;
 }
 
-h5{
-    color: #E71C24;
+h5 {
+  color: #e71c24;
 }
 
-.navbar-nav>li {
-    color: #FFF;
+.navbar-nav > li {
+  color: #fff;
 }
 
-.md-button.md-default-theme.md-primary.md-raised, .md-button.md-primary.md-raised, .md-button.md-default-theme.md-primary.md-fab, .md-button.md-primary.md-fab {
-    background-color: #eb1e00;
+.md-button.md-default-theme.md-primary.md-raised,
+.md-button.md-primary.md-raised,
+.md-button.md-default-theme.md-primary.md-fab,
+.md-button.md-primary.md-fab {
+  background-color: #eb1e00;
 }
 
-.md-button.md-default-theme.md-primary.md-raised, .md-button.md-primary.md-raised, .md-button.md-default-theme.md-primary.md-fab, .md-button.md-primary.md-fab:hover {
-    background-color: #D51B23;
+.md-button.md-default-theme.md-primary.md-raised,
+.md-button.md-primary.md-raised,
+.md-button.md-default-theme.md-primary.md-fab,
+.md-button.md-primary.md-fab:hover {
+  background-color: #d51b23;
 }
 
 .bar-chart > svg {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .angular-popover {
-    width: 400px;
-    min-height: 100px;
+  width: 400px;
+  min-height: 100px;
 }
 
 .angular-popover-template {
-    padding: 5pt;
-    margin: 5pt;
+  padding: 5pt;
+  margin: 5pt;
 }
 
 .logo-img-responsive {
-    height: auto;
-    width: auto;
-    max-height: 64px;
-    max-width: 205px;
+  height: auto;
+  width: auto;
+  max-height: 64px;
+  max-width: 205px;
 }
 
-line.nv-force-link{
-    stroke: #333;
-    stroke-opacity: 0.7;
+line.nv-force-link {
+  stroke: #333;
+  stroke-opacity: 0.7;
 }
 
-md-content.md-default-theme, md-content {
-    background-color: #fff;
+md-content.md-default-theme,
+md-content {
+  background-color: #fff;
 }
 
-md-card.md-default-theme, md-card {
-    background-color: rgb(250,250,250);
+md-card.md-default-theme,
+md-card {
+  background-color: rgb(250, 250, 250);
 }
-    
+
 .ng-hide.ng-hide-animate {
-    display: none !important;
+  display: none !important;
 }
 
 .ng-show.ng-show-animate {
-    display: none !important;
+  display: none !important;
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
-    background-color:#303030;color:#fff;
-    font-size:13px
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+  background-color: #303030;
+  color: #fff;
+  font-size: 13px;
 }
 
 .footer a {
-    color:#F9AE40
+  color: #f9ae40;
 }
 
 .appContent {
-    width: 100%;
-    height: 100%; 
-    padding-bottom: 16px
+  width: 100%;
+  height: 100%;
+  padding-bottom: 16px;
 }
 
 #loaderDiv {
-  background-color: #D51B23;
+  background-color: #d51b23;
   text-align: center;
   height: 100%;
-  width: 100%
+  width: 100%;
 }
 
 .loader {
@@ -213,97 +226,99 @@ md-card.md-default-theme, md-card {
 }
 
 md-checkbox.md-checked .md-icon {
-    background-color: rgba(64, 161, 255, 0.9);
+  background-color: rgba(64, 161, 255, 0.9);
 }
 
 md-checkbox {
-    margin-bottom: 0px !important;
+  margin-bottom: 0px !important;
 }
 
-.md-chip-input-container, .md-chip-input-container div, .md-chip-input-container input {
-    width: 100%
+.md-chip-input-container,
+.md-chip-input-container div,
+.md-chip-input-container input {
+  width: 100%;
 }
 
 .ui-notification .message {
-    margin: 10px 10px 10px 10px;
-    box-shadow: none !important;
-    border-radius: 0px !important;
-    background: none;
-    padding: 0px !important;
+  margin: 10px 10px 10px 10px;
+  box-shadow: none !important;
+  border-radius: 0px !important;
+  background: none;
+  padding: 0px !important;
 }
 
 .ui-notification.error {
-    background: #D51B23;
+  background: #d51b23;
 }
 
 .badge {
-    color: white;
-    background-color: #D51B23;
+  color: white;
+  background-color: #d51b23;
 }
 
 .formgroup {
-    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-    border-radius:10px
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
 }
 
 .formButton {
-    text-align:left;
-    display: block;
-    text-align: center;                    
-    border: 2px solid white;
-    border-radius: 10px;
-    outline: 0;
-    cursor: pointer;
-    font-weight: 500
+  text-align: left;
+  display: block;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 10px;
+  outline: 0;
+  cursor: pointer;
+  font-weight: 500;
 }
 
 .floatButton {
-    text-align:left;
-    display: block;
-    text-align: center;
-    position: fixed;
-    bottom: 27px;
-    right: 30px;
-    z-index: 20;
-    border: 2px solid white;
-    border-radius: 10px;
-    outline: 0;
-    cursor: pointer;
-    font-weight: 500;
+  text-align: left;
+  display: block;
+  text-align: center;
+  position: fixed;
+  bottom: 27px;
+  right: 30px;
+  z-index: 20;
+  border: 2px solid white;
+  border-radius: 10px;
+  outline: 0;
+  cursor: pointer;
+  font-weight: 500;
 }
 
 button.md-accent {
-    color: rgb(63,81,181) !important;
-    background: default !important;
+  color: rgb(63, 81, 181) !important;
+  background: default !important;
 }
 
-.angular-popover-container{
-    top: 35px !important;
-    bottom: 35px !important
+.angular-popover-container {
+  top: 35px !important;
+  bottom: 35px !important;
 }
 
 .dataTables_length {
-    color: #75797d !important;
+  color: #75797d !important;
 }
 
 .dataTables_length select {
-    color: #75797d !important;
+  color: #75797d !important;
 }
 
 .dataTables_filter {
-    color: #75797d !important;
+  color: #75797d !important;
 }
 
 .dataTables_info {
-    color: #75797d !important;
+  color: #75797d !important;
 }
 
-md-backdrop{
-    position: fixed;
+md-backdrop {
+  position: fixed;
 }
 
 .form_section:hover {
-    background-color: rgb(57,73,171) !important;
+  background-color: rgb(57, 73, 171) !important;
 }
 
 /*.ng-untouched ~ .md-input-messages-animation {
@@ -312,12 +327,13 @@ md-backdrop{
 }*/
 
 .md-datepicker-input-container {
-    width: 70%
+  width: 70%;
 }
 
-md-nav-bar.md-default-theme md-nav-ink-bar, md-nav-bar md-nav-ink-bar {
-    color: white;
-    background: white;
+md-nav-bar.md-default-theme md-nav-ink-bar,
+md-nav-bar md-nav-ink-bar {
+  color: white;
+  background: white;
 }
 
 /* li.md-nav-item.ng-scope.ng-isolate-scope:hover {
@@ -325,186 +341,192 @@ md-nav-bar.md-default-theme md-nav-ink-bar, md-nav-bar md-nav-ink-bar {
 } */
 
 .form-group {
-    margin-bottom: 0px !important;
+  margin-bottom: 0px !important;
 }
 
 .md-button {
-    font-size: 0.85rem !important;
+  font-size: 0.85rem !important;
 }
 
 md-input-container {
-    margin-top: 20px !important;
+  margin-top: 20px !important;
 }
 
 md-collapsible-header {
-    display: flex !important;
+  display: flex !important;
 }
 
 label {
-    margin-bottom: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .md-chips {
-    font-size: 0.9rem !important;
+  font-size: 0.9rem !important;
 }
 
 md-icon.md-datepicker-calendar-icon {
-    margin-top: 10px !important;
+  margin-top: 10px !important;
 }
 
 button.goUpButton:hover {
-    animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 img.helpIcon:hover {
-    animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 md-toolbar.appTopBar {
-    position: fixed;
+  position: fixed;
 }
 
 .angular-popover-container {
-    z-index: 99 !important;
+  z-index: 99 !important;
 }
 
 .with-help-icon {
-    width: 90%;
+  width: 90%;
 }
 
 md-input-container label {
-    white-space: inherit !important;
+  white-space: inherit !important;
 }
 
 md-select-value span {
-    white-space: inherit !important;
+  white-space: inherit !important;
 }
 
 button {
-    white-space: inherit;
+  white-space: inherit;
 }
 
-md-input-container.md-icon-right>label:not(.md-no-float):not(.md-container-ignore) {
-    width: 100% !important;
+md-input-container.md-icon-right > label:not(.md-no-float):not(.md-container-ignore) {
+  width: 100% !important;
 }
 
 .table-title {
-    text-align: center; 
-    color: #75797d; 
-    font-size: 0.87em
+  text-align: center;
+  color: #75797d;
+  font-size: 0.87em;
 }
 
-.table-row{
-    color: rgb(105, 105, 107); 
-    font-size: 0.84em;
-    cursor: pointer;
+.table-row {
+  color: rgb(105, 105, 107);
+  font-size: 0.84em;
+  cursor: pointer;
 }
 
 #notification_count {
-    padding: 4px 7px 3px 7px;
-    background: #C00;
-    color: #ffffff;
-    font-weight: bold;
-    margin-left: 7px;
-    border-radius: 15px;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    position: absolute;
-    margin-top: -8px;
-    font-size: 11px;
+  padding: 4px 7px 3px 7px;
+  background: #c00;
+  color: #ffffff;
+  font-weight: bold;
+  margin-left: 7px;
+  border-radius: 15px;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  position: absolute;
+  margin-top: -8px;
+  font-size: 11px;
 }
 
 .notification-bell-container {
-    position:relative
+  position: relative;
 }
 
 #notificationContainer {
-    background-color: #fff;
-    border: 1px solid rgba(100, 100, 100, .4);
-    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
-    overflow: visible;
-    position: absolute;
-    top: 70px;
-    width: 400px;
-    display: none;
-    color: black;
-    margin-left: calc(100vw/2 - 215px);
-    min-height: 150px;
+  background-color: #fff;
+  border: 1px solid rgba(100, 100, 100, 0.4);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
+  overflow: visible;
+  position: absolute;
+  top: 70px;
+  width: 400px;
+  display: none;
+  color: black;
+  margin-left: calc(100vw / 2 - 215px);
+  min-height: 150px;
 }
 
 #notificationTitle {
-    padding: 8px;
-    font-size: 0.75em;
-    background-color: #D51B23;
-    z-index: 1000;
-    width: 100%;
-    border-bottom: 1px solid #dddddd;
-    text-align: center;
-    color: white;
+  padding: 8px;
+  font-size: 0.75em;
+  background-color: #d51b23;
+  z-index: 1000;
+  width: 100%;
+  border-bottom: 1px solid #dddddd;
+  text-align: center;
+  color: white;
 }
 
 .notifications ul {
-    list-style-type: none;
-    display: inline-grid;
-    padding: 0;
-    width: 100%;
+  list-style-type: none;
+  display: inline-grid;
+  padding: 0;
+  width: 100%;
 }
 
 .notifications ul li {
-    display: block;
-    padding: 10px;
-    font-weight: 400;
-    font-size: 0.65em;
-    outline: none;
+  display: block;
+  padding: 10px;
+  font-weight: 400;
+  font-size: 0.65em;
+  outline: none;
 }
 
 .notifications ul li:hover {
-    background-color: rgba(230, 230, 230, 0.75);
-    cursor: pointer;
+  background-color: rgba(230, 230, 230, 0.75);
+  cursor: pointer;
 }
 
 #notificationsBody {
-    max-height: 200px;
-    overflow: auto;
-    /* text-align: center; */
+  max-height: 200px;
+  overflow: auto;
+  /* text-align: center; */
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
-  
+
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
-  
+
 ::-webkit-scrollbar-thumb {
-    background: #c00;
+  background: #c00;
 }
-  
+
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
 
 .notifications-close-button {
-    font-size: 1em;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
+  font-size: 1em;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
 }
 
 .no-notifications-message {
-    font-size: 0.75em;
-    color: #383838b8;
-    margin: auto;
+  font-size: 0.75em;
+  color: #383838b8;
+  margin: auto;
 }
 
 .technology-form-message {
-    font-size: 0.95em;
-    text-align: justify;
-    color: #2b2b2bd6;
+  font-size: 0.95em;
+  text-align: justify;
+  color: #2b2b2bd6;
 }
 
 .alert-info {
-    text-align: justify;
-    font-size: 0.95em;
+  text-align: justify;
+  font-size: 0.95em;
+}
+
+.user-topbar-image {
+  height: 25px;
+  width: 25px;
+  border-radius: 40px;
 }
