New tab functionality completed. User profile functionality and technology asignation functionality are both still in progress

--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,1 +1,5 @@
-Hello world!
+<div style="height: calc(100vh - 90px); display: flex;">
+  <p style="margin: auto; color: #717171d9;">
+    Esta página aún se encuentra bajo construcción
+  </p>
+</div>
