--- a/public/css/main.css
+++ b/public/css/main.css
@@ -348,10 +348,6 @@ md-nav-bar md-nav-ink-bar {
   font-size: 0.85rem !important;
 }
 
-md-input-container {
-  margin-top: 20px !important;
-}
-
 md-collapsible-header {
   display: flex !important;
 }
@@ -529,4 +525,91 @@ md-input-container.md-icon-right > label:not(.md-no-float):not(.md-container-ign
   height: 25px;
   width: 25px;
   border-radius: 40px;
+}
+
+md-tabs-canvas {
+  background-color: #d51b23;
+}
+
+md-tab-item {
+  color: white !important;
+  font-weight: 700;
+}
+
+md-tabs.md-default-theme md-ink-bar,
+md-tabs md-ink-bar {
+  color: white !important;
+  background-color: white !important;
+}
+
+md-pagination-wrapper {
+  position: relative;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
+md-content.md-padding {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+section#aboutSec div.technologies-info-container div.row {
+  margin: 0 !important;
+}
+
+section#contactInfoSec div#bottomTopDiv div.container {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #757575;
+  font-size: 0.92rem;
+}
+
+.actions {
+  width: 100%;
+  height: 100% !important;
+  display: table-cell;
+  vertical-align: middle;
+  cursor: pointer;
+  outline: none;
+}
+
+md-content.technologies-data h2 {
+  font-size: 2em;
+  font-weight: 400;
+  margin-top: 0;
+}
+
+md-content.technologies-data p {
+  font-size: 0.96em;
+  color: #757575;
+  text-align: justify;
+}
+
+md-content.technologies-data div.no-data {
+  text-align: center;
+  font-size: 0.96em;
+  color: #757575;
+}
+
+md-content.technologies-data div.loading-container {
+  min-height: 300px;
+  width: 100%;
+  display: flex;
+}
+
+md-content.technologies-data div.loading-container div.custom-loader {
+  height: 100%;
+  margin: auto;
+}
+
+md-content.technologies-data div.loading-container div.custom-loader i {
+  font-size: 5em;
+  color: #c00;
+}
+
+div#chart_div {
+  cursor: pointer;
 }
